color contrast fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -43,7 +43,7 @@
   header h1 {
     text-align: center;
     font-size: 2rem;
-    color: var(--primary-color);
+    color: var(--text-color);
   }
 
   .main-nav {
@@ -53,7 +53,7 @@
   
   .main-nav a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--text-color);
     font-weight: bold;
     padding: 0.5rem 0.5rem;
     border: 1px solid var(--accent1-color);
@@ -108,7 +108,6 @@
   }
   
   .history {
-    background-color: var(--secondary-color); /* or any color you like */
     padding: 2rem;
     margin-bottom: 1rem; 
   }
@@ -170,6 +169,7 @@
     margin-top: 0.5rem;
     color: var(--primary-color);
     font-size: 0.9rem;
+    color: #000;
   }
   
   .gallery figure img {
@@ -181,7 +181,7 @@
   section {
     padding: 2rem 1rem;
     margin-bottom: 1rem;
-    background-color: var(--secondary-color);
+    background-color: #f4ebe9;
     box-shadow: var(--box-shadow);
     text-align: center;
   }
@@ -209,8 +209,8 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--primary-color);
-    color: #fff;
+    background-color: var(--secondary-color);
+    color: #000;
     padding: 1rem;
     margin-top: 1rem;
     border-top: 1px solid #000;
